--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ main_module_1
 main_v2
 Module 2 partie 3
 Fréquence cardiaque
-module 1 logigramme
-module 2 generation
-module 2 logigramme coeur
+module 1 logigramme.png
+module 2 generation.png
+module 2 logigramme coeur.png
 scribe
