Update feuille avancement groupe

--- a/desktop.ini
+++ b/desktop.ini
@@ -1,2 +1,3 @@
 [LocalizedFileNames]
 A1-Fondamentaux Scientifiques -2018-2019_Feuille_Avancement_Groupe.docx=@A1-Fondamentaux Scientifiques -2018-2019_Feuille_Avancement_Groupe,0
+A1-Fondamentaux Scientifiques -2018-2019_Feuille_Avancement_Groupe_Fin.docx=@A1-Fondamentaux Scientifiques -2018-2019_Feuille_Avancement_Groupe_Fin,0
